mudanca no html

--- a/cafeteria.html
+++ b/cafeteria.html
@@ -8,7 +8,7 @@
 <body>
    <h1>Cafeteria Senai</h1>
    <br>
-   <img src="../img/cafeteria.jfif" alt="">
+   <img src="./img/cafeteria.jfif" alt="">
    <br>
    <dl>
     <dt>Espresso - R$ 7,00</dt>
